<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notice">

    <fragment
        android:id="@+id/nav_notice"
        android:name="com.test.stoppishing.ui.notice.NoticeFragment"
        android:label="@string/menu_notice"
        tools:layout="@layout/fragment_notice" />

    <fragment
        android:id="@+id/nav_qna"
        android:name="com.test.stoppishing.ui.qna.QnAFragment"
        android:label="@string/menu_qna"
        tools:layout="@layout/fragment_qna" />

    <fragment
        android:id="@+id/nav_set_phone_number"
        android:name="com.test.stoppishing.ui.setphonenumber.SetNumberFragment"
        android:label="@string/menu_set_phone_number"
        tools:layout="@layout/fragment_set_phone_number" />
</navigation>